--- a/HotelLandon.WebUI/wwwroot/scss/site.scss
+++ b/HotelLandon.WebUI/wwwroot/scss/site.scss
@@ -1,4 +1,12 @@
-﻿$red: #0FF;
+﻿$primary: red;
+$seconday: blue;
+
+@import "../lib/bootstrap/scss/_functions.scss";
+@import "../lib/bootstrap/scss/_variables.scss";
+@import "../lib/bootstrap/scss/_mixins.scss";
+@import "../lib/bootstrap/scss/bootstrap.scss";
+
+/*$red: red;
 $hoverlink: #00ff21;
 
 body {
@@ -13,4 +21,4 @@ body {
             color: $hoverlink;
         }
     }
-}
+}*/
